pkg/ibmvpc/examples/out/explain_out/tgwEnableDefaultFilter_all_vpcs_explain_debug.txt
Explaining connectivity from ky-vsi0-subnet5 to ky-vsi0-subnet11
================================================================

Allowed connections from test-vpc0-ky/ky-vsi0-subnet5[10.240.9.4] to test-vpc1-ky/ky-vsi0-subnet11[10.240.80.4]: All Connections
	The TCP sub-connection is responsive

Path:
	ky-vsi0-subnet5[10.240.9.4] -> security group sg1-ky -> subnet5 -> network ACL acl3-ky -> 
	test-vpc0-ky -> TGW local-tg-ky -> test-vpc1-ky -> 
	network ACL acl11-ky -> subnet11 -> security group sg11-ky -> ky-vsi0-subnet11[10.240.80.4]


Details:
~~~~~~~~
Path enabled by the following rules:
	Egress:
		security group sg1-ky allows connection with the following allow rules
			index: 1, direction: outbound,  conns: protocol: all, remote: 0.0.0.0/0, local: 0.0.0.0/0
		network ACL acl3-ky allows connection with the following allow rules
			index: 0, direction: outbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

	transit gateway local-tg-ky allows connection via transit connection tg_connection1 with the following prefix filter
		default prefix,  action: permit

	Ingress:
		network ACL acl11-ky allows connection with the following allow rules
			index: 2, direction: inbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow
		security group sg11-ky allows connection with the following allow rules
			index: 1, direction: inbound,  conns: protocol: all, remote: 0.0.0.0/0, local: 0.0.0.0/0

TCP respond enabled by the following rules:
	Egress:
		network ACL acl11-ky allows connection with the following allow rules
			index: 1, direction: outbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

	Ingress:
		network ACL acl3-ky allows connection with the following allow rules
			index: 1, direction: inbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

------------------------------------------------------------------------------------------------------------------------
